@@ -1,7 +1,7 @@
 <div ng-controller="UnauthorizedCtrl" class="unauthorized">
 <div class="unauthorized-wrapper">
 	<div class="unauthorized-header">
-		<img class="unauthorized-header__icon" src="static/assets/logo-CrateDB@2x.png">
+		<img class="unauthorized-header__icon" src="static/assets/logo.png">
 	</div>
 
 	<div class="unauthorized-body">
